# cdisc-rules-engine

./: .editorconfig  .env.example  .flake8  .funcignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .yamllint.yaml  CORE-Report-2026-07-14T16-23-17.csv  Dockerfile.build  JSON.xlsx  LICENSE  MANIFEST.in  PYPI.md  README.md  README_Build_Executable.md  build_cdisc_executable.sh  core.py  core.spec  cre.py  db_test.py  dockerfile  env.example  host.json  local.settings.json  package-lock.json  package.json  pylock.dev.toml  pylock.toml  pyproject-mac.toml  pyproject-ubuntu.toml  pyproject-windows.toml  pyproject.toml  requirements-dev.txt  requirements-rule-tester.txt  requirements.txt  rules_list.json  run_test.py  run_validation.py  (+5 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  2-rule-feature.yml  3-other-feature.yml  config.yml  rule-blocking-bug.md  rule-blocking-enhancement.md
.github/test/: extract_deploy_link.py  selenium_test_editor.py  unit-test-coreid-CG0002-negative.xlsx  unit-test-coreid-CG0006-negative 1.xlsx
.github/workflows/: automated-ci.yml  autoupdate.yml  build-binary.yml  build-version.yml  build_version.yml  check-schema-markdown.yml  deploy-rule-tester.yml  docker-release.yml  docker_release.yml  lint-format.yml  lint-on-pull-request.yml  lint_format.yml  manual_release.yml  merge-schema-markdown.yml  open-rules-dispatch.yml  prerelease-update-cache.yml  prerelease-update-version.yml  release.yml  rule-tester-dev.yml  rule-tester-prod.yml  rule-tester.yml  test-release.yml  test-rule-editor-preview.yml  test-suite.yml  test-unit.yml  test_JSON.yml  test_release-new.yml  test_release-old.yml  test_release.yml  test_rule_editor_preview.yml  test_suite.yml  test_unit.yml  upload-pr-artifact.yml  validate-published-rules.yml
Examples/adam/: ADAE.json  ADQSADAS.json  ADQSCIBC.json  ADSL.json  ADTTE.json  adae.sas7bdat  adqscibc.sas7bdat  adsl.sas7bdat  adtte.sas7bdat  define.xml
Examples/issues/: AE.json  CM.json  DD.json  DI.json  DM.json  DS.json  EC.json  EX.json  FA.json  FT.json  IE.json  LB.json  MH.json  OE.json  QSPH.json  QSSL.json  RELREC.json  RS.json  SE.json  SUPPDM.json  SUPPEC.json  SV.json  TA.json  TE.json  TI.json  TS.json  TV.json  VS.json  ae.xpt  cm.xpt  dd.xpt  define2-1.xsl  di.xpt  dm.xpt  ds.xpt  ec.xpt  fa.xpt  ft.xpt  ie.xpt  lb.xpt  (+13 more)
Examples/rules/: ae.json  ae.xlsx  rules.json
Examples/sdtm/: AE.json  CM.json  DM.json  (+47 more)
Examples/sdtm-define-2-1/: AE.json  CM.json  DD.json  DI.json  DM.json  DS.json  EC.json  EX.json  FA.json  FT.json  IE.json  LB.json  MH.json  OE.json  QSPH.json  QSSL.json  RELREC.json  RS.json  SE.json  SUPPDM.json  SUPPEC.json  SV.json  TA.json  TE.json  TI.json  TS.json  TV.json  VS.json  ae.sas7bdat  cm.sas7bdat  cm.xpt  dd.sas7bdat  define.xml  di.sas7bdat  dm.sas7bdat  ds.sas7bdat  ds.xpt  ec.sas7bdat  ec.xpt  ex.sas7bdat  (+33 more)
QARegressionTests/: cli_test.py  cli_tests.py
TestRule/: __init__.py  function.json
Test_JSONFiles_MSG/: ae.json  qsph.json  ta.json  vs.json
Test_SASFiles_6_domains_SDTM-ETL/: AE.xpt  DM.xpt
Test_SASFiles_MSG/: dm.xpt
cdisc_rule_tester/: rule_builder.py
cdisc_rules_engine/: __init__.py  load_plugins.py  plugin_loader.py  rules_engine.py  sql_rules_engine.py
docs/: PYPI.md  README.md  _sidebar.md  build_executable.md  cli-reference.md  contributing.md  development.md  faq.md  index.html  index.md  quick-start.md
engine/: __init__.py  rules_engine.py  run_validation.py
scripts/: README.md  bundle_json_schema.py  json_pkl_converter.py  list_dataset_metadata.py  list_dataset_metadata_handler.py  merge_schema_markdown.md  merge_schema_markdown.py  openapi-to-json.py  run_sql_validation.py  run_validation.py  script_utils.py  test_rule.py  update_cache.py  validate_published_rules.py
tests/: PerformanceTest.py  conftest.py  run_validation.sh  test_validation.sh  testrulelist.txt
(+1889 files in other folders)
